--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.5",
+    "swiper": "^8.4.2",
     "typescript": "^4.8.2",
     "web-vitals": "^2.1.4"
   },
@@ -45,6 +46,7 @@
   },
   "devDependencies": {
     "@types/styled-components": "^5.1.26",
+    "@types/swiper": "^6.0.0",
     "eslint": "^8.23.0",
     "eslint-plugin-react": "^7.31.1"
   }
