--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
     "@types/styled-components": "^5.1.26",
     "@types/swiper": "^6.0.0",
     "eslint": "^8.23.0",
-    "eslint-plugin-react": "^7.31.1"
+    "eslint-plugin-jest-dom": "^4.0.2",
+    "eslint-plugin-react": "^7.31.1",
+    "eslint-plugin-testing-library": "^5.7.0"
   }
 }
